# .dotfiles

./: .Xdefaults  .bash_profile  .gitignore  .gitmodules  .zprofile  .zshrc  AGENTS.md  TODO.md  bootstrap.sh  flake.nix
.beads/done-instructions/: action.md  blueprint.md  do.md  examine.md  integrate.md  multiplex.md  test.md  vision.md
.beads/formulas/: vibmax-action.formula.toml  vibmax.formula.toml
.beads/task-instructions/: blueprint.md  do.md  integrate.md  multiplex.md  test.md  vision.md
.config/: .gitignore  env  helium-browser-flags.conf  profile  pythonrc  settings.py
.config/bat/: config
.config/bat/themes/: pelz.tmTheme
.config/direnv/: direnv.toml  direnvrc
.config/emacs/: .gitignore  config.el  config.org  early-init.el  init.el  theme.el
.config/emacs/auto-inserts/: CMakeLists.txt  _.c  _.org  _.zsh  main.c  package.json
.config/emacs/lisp/: gruvbox-material-extras.el  gruvbox-material.el
.config/firefox/: policies.json
.config/fontconfig/: fonts.conf
.config/foot/: foot.ini  theme.ini
.config/git/: config  ignore
.config/glow/: glow.yml  style.json
.config/helium/: policies.json
.config/helium/policies/: policies.json
.config/hypr/: hyprland.conf  hyprland.lua  theme.conf
.config/lsd/: colors.yaml
.config/nix/: nix.conf
.config/opencode/: .gitignore  opencode.json  package-lock.json  package.json  tui.json
.config/opencode/agents/: agent.md  assistant.md  council.md  creative.md  expert_business_analyst.md  expert_cybersecurity.md  expert_elon_musk.md  expert_game_theory_analyst.md  expert_historian.md  (+11 more)
.config/pelz/: README.md  pelz
.config/thefuck/: settings.py
.config/vim/: init.vim
.config/waybar/: config.jsonc  style.css
.config/wayland/: profile
.config/x11/: resources  theme
.config/zsh/: .zshrc  alias.zsh  p10k.zsh  p10k_custom.zsh  rc.zsh
.pi/: .gitignore
.pi/agent/: SYSTEM.md  models.json  settings.json
.pi/skills/: controvertial.md  labyrinth.md
home/: .bash-profile
home-manager/: base.nix  main.nix
home/.config/: env
home/.config/emacs/auto-inserts/: .editorconfig  .env  CMakeLists.txt  _.c  _.editorconfig  package.json  tsconfig.json
hosts/base/: configuration.nix  home.nix
hosts/main/: configuration.nix  home.nix
hosts/pc/: configuration.nix  hardware-configuration.nix  home.nix
hosts/work/: configuration.nix  hardware-configuration.nix  home.nix
nixos/: base.nix
nixos/main/: configuration.nix
nixos/work/: configuration.nix
old/: .gitignore  .gitmodules  .profile  .zprofile  bootstrap.sh  flake.nix
old/custom/: jump_to_match.plugin.zsh  p10k_custom.plugin.zsh
old/home/: .xprofile
(+188 files in other folders)
